--- a/accountype/pom.xml
+++ b/accountype/pom.xml
@@ -55,9 +55,8 @@
             <version>2.7.2</version>
         </dependency>
 		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
-			<version>3.4.2</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
