--- a/product/pom.xml
+++ b/product/pom.xml
@@ -52,6 +52,10 @@
             <version>2.7.1</version>
         </dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>3.4.1</version>
