--- a/accountype/pom.xml
+++ b/accountype/pom.xml
@@ -63,7 +63,13 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.24</version>
 		</dependency>
-		<!---Checkstyle - FIN-->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <version>3.4.21</version>
+            <scope>test</scope>
+        </dependency>
+        <!---Checkstyle - FIN-->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -81,6 +87,43 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>target/jacoco.exec</dataFile>
+							<outputDirectory>target/my-reports</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/sistemabancario/accountype/AccountypeApplication.class</exclude>
+						<exclude>com/sistemabancario/accountype/model/**</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<!--Checkstyle - INI-->
 			<plugin>
