--- a/documenttype/pom.xml
+++ b/documenttype/pom.xml
@@ -57,6 +57,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<version>3.4.21</version>
+			<scope>test</scope>
+		</dependency>
 		<!---Checkstyle - FIN-->
 	</dependencies>
 	<dependencyManagement>
@@ -77,6 +83,44 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>target/jacoco.exec</dataFile>
+							<outputDirectory>target/my-reports</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/sistemabancario/documenttype/DocumenttypeApplication.class</exclude>
+						<exclude>com/sistemabancario/documenttype/model/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+
 			<!--Checkstyle - INI-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
