--- a/product/pom.xml
+++ b/product/pom.xml
@@ -67,6 +67,12 @@
 			<version>3.1.2</version>
 			<type>maven-plugin</type>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<version>3.4.21</version>
+			<scope>test</scope>
+		</dependency>
 		<!---Checkstyle - FIN-->
 	</dependencies>
 	<dependencyManagement>
@@ -86,6 +92,43 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>target/jacoco.exec</dataFile>
+							<outputDirectory>target/my-reports</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/sistemabancario/product/ProductApplication.class</exclude>
+						<exclude>com/sistemabancario/product/model/**</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<!--Checkstyle - INI-->
 			<plugin>
