--- a/transactionrecord/pom.xml
+++ b/transactionrecord/pom.xml
@@ -55,6 +55,18 @@
 			<type>maven-plugin</type>
 		</dependency>
 		<!---Checkstyle - FIN-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 		<!--<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
