--- a/transactionrecord/src/main/resources/application.properties
+++ b/transactionrecord/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8090
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=sistemafinanciero
+spring.application.name= TransactionRecord
 
 # Para generar el swagger
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
