--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
   application:
     name: AccountApplication
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
 server:
   port: 9002
